--- a/topicmodelling.ipynb
+++ b/topicmodelling.ipynb
@@ -16,7 +16,7 @@
         "id": "yY4y-bsZKxGx"
       },
       "source": [
-        "## (Sampme code) Large language models: a primer for economists\n",
+        "## (Sample code) Large language models: a primer for economists\n",
         "\n",
         "\n",
         "This repository accompanies our paper, **“Large language models: a primer for economists”**, authored by Byeungchun Kwon, Taejin Park, Fernando Perez-Cruz, and Phurichai Rungcharoenkitkul.\n",
