--- a/topicmodelling.ipynb
+++ b/topicmodelling.ipynb
@@ -45,7 +45,7 @@
         "id": "JXeNB6CO4u93"
       },
       "source": [
-        "### Process Overview for Genomics Papers Analysis"
+        "### Process Overview"
       ]
     },
     {
@@ -64,7 +64,7 @@
         "id": "eeGZ7uB4DiMa"
       },
       "source": [
-        "  This notebook represents a detailed workflow for analyzing genomics papers published between 2000 and 2024. The process involves several steps, categorized into data organization, signal extraction, and quantitative analysis:\n",
+        "  This notebook represents a detailed workflow for analyzing papers about genomics published between 2000 and 2024. The process involves several steps, categorized into data organization, signal extraction, and quantitative analysis:\n",
         "\n",
         "  1. **Data Collection:**\n",
         "    - Genomics Papers during 2000–24:\n",
